Add service-to-service groups API.
